grid/change breakpoints

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -428,12 +428,10 @@ $paragraph-margin-bottom:   1rem !default;
 
 // scss-docs-start grid-breakpoints
 $grid-breakpoints: (
-  xs: 0,
-  sm: 576px,
-  md: 768px,
-  lg: 992px,
-  xl: 1200px,
-  xxl: 1400px
+  ph: 0,
+  tb: 750px,
+  lp: 950px,
+  dt: 1200px
 ) !default;
 // scss-docs-end grid-breakpoints
 
